--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -61,9 +61,11 @@
         android:layout_width="40dp"
         android:layout_height="130dp"
         android:layout_gravity="end|center"
+        android:layout_marginEnd="8dp"
         android:src="@drawable/greey_like"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="parent" />
 
 
