--- a/app/src/main/res/layout/fragment_add_animal.xml
+++ b/app/src/main/res/layout/fragment_add_animal.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.AddAnimal.AddAnimal">
+    tools:context=".ui.addAnimal.AddAnimalFragment">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Add Your Animal!"
+        android:text="@string/add_your_animal"
         android:textAllCaps="false"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,46 +19,47 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/textNameAddAnimal"
+        android:id="@+id/tvNameAddAnimal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Enter name your animal"
+        android:hint="@string/enter_name_your_animal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/text_imgURL"
+        android:id="@+id/tvImgURL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Enter URL about photo your animal"
+        android:hint="@string/enter_url_about_photo_your_animal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textNameAddAnimal" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNameAddAnimal"
+        tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/text_Description"
+        android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Enter short disription for your animal"
+        android:hint="@string/enter_short_description_for_your_animal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_imgURL" />
+        app:layout_constraintTop_toBottomOf="@+id/tvImgURL" />
 
     <Button
-        android:id="@+id/button_AddAnimal"
+        android:id="@+id/btnAddAnimal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Preview animal"
+        android:text="@string/preview_animal"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_Description" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
