--- a/app/src/main/res/layout/fragment_animal_preview.xml
+++ b/app/src/main/res/layout/fragment_animal_preview.xml
@@ -26,7 +26,7 @@
 
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageViewPreview"
+            android:id="@+id/ivPreviewAvatar"
             android:layout_width="120dp"
             android:layout_height="120dp" />
 
@@ -35,7 +35,7 @@
 
 
     <TextView
-        android:id="@+id/textView_namePreview"
+        android:id="@+id/tvNamePreview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -47,7 +47,7 @@
 
 
     <TextView
-        android:id="@+id/textView_DescriptionPreview"
+        android:id="@+id/tvDescriptionPreview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
@@ -57,19 +57,19 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView_namePreview"
+        app:layout_constraintTop_toBottomOf="@+id/tvNamePreview"
         app:layout_constraintVertical_bias="0.536" />
 
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/ivPreviewLike"
         android:layout_width="40dp"
         android:layout_height="130dp"
         android:layout_gravity="end|center"
         android:src="@drawable/greey_like"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_DescriptionPreview"
+        app:layout_constraintStart_toEndOf="@+id/tvDescriptionPreview"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -92,7 +92,7 @@
 </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/button_add_animal_into_preview"
+        android:id="@+id/butPreview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
