--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.myapplication_finalnavigatio.ui.Home.Home"
+        android:name="com.example.myapplication_finalnavigatio.ui.home.Home"
         android:label="Animal Collections"
         tools:layout="@layout/fragment_home" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_favourites"
-        android:name="com.example.myapplication_finalnavigatio.ui.Favourite.Favourite"
+        android:name="com.example.myapplication_finalnavigatio.ui.favourite.FavouriteFragment"
         android:label="Favourite Animals"
         tools:layout="@layout/fragment_favourite" >
         <action
@@ -36,17 +36,17 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.myapplication_finalnavigatio.ui.Settings.Settings"
+        android:name="com.example.myapplication_finalnavigatio.ui.Settings.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/details"
-        android:name="com.example.myapplication_finalnavigatio.ui.Details.Details"
+        android:name="com.example.myapplication_finalnavigatio.ui.details.DetailsFragment"
         android:label="Details about Animal"
         tools:layout="@layout/fragment_details" />
     <fragment
         android:id="@+id/addAnimal"
-        android:name="com.example.myapplication_finalnavigatio.ui.AddAnimal.AddAnimal"
+        android:name="com.example.myapplication_finalnavigatio.ui.addAnimal.AddAnimalFragment"
         android:label="fragment_add_animal"
         tools:layout="@layout/fragment_add_animal" >
         <action
@@ -60,7 +60,7 @@
     </fragment>
     <fragment
         android:id="@+id/animalPreview"
-        android:name="com.example.myapplication_finalnavigatio.ui.AnimalPreview.AnimalPreview"
+        android:name="com.example.myapplication_finalnavigatio.ui.animalPreview.AnimalPreviewFragment"
         android:label="fragment_animal_preview"
         tools:layout="@layout/fragment_animal_preview" >
         <action
