--- a/app/src/main/res/layout/recyclerview_likeitem.xml
+++ b/app/src/main/res/layout/recyclerview_likeitem.xml
@@ -23,7 +23,7 @@
 
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivAvatar"
             android:layout_width="120dp"
             android:layout_height="120dp" />
 
@@ -32,7 +32,7 @@
 
 
     <TextView
-        android:id="@+id/textView_name"
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -44,7 +44,7 @@
 
 
     <TextView
-        android:id="@+id/textView_Description"
+        android:id="@+id/tvAbout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
@@ -53,12 +53,12 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name"
+        app:layout_constraintTop_toBottomOf="@+id/tvName"
         app:layout_constraintVertical_bias="0.536" />
 
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ivLike"
         android:layout_width="40dp"
         android:layout_height="130dp"
         android:layout_gravity="end|center"
