--- a/app/src/main/res/layout/fragment_animal_preview.xml
+++ b/app/src/main/res/layout/fragment_animal_preview.xml
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="AddAnimal!"
+        android:text="@string/add_animal"
         android:textAllCaps="false" />
 
 
