--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|center"
             android:layout_marginStart="16dp"
-            android:text="Add your own animal "
+            android:text="@string/add_your_animal"
             android:textSize="25sp" />
 
 
