--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,7 @@
 
 
     <Switch
-        android:id="@+id/switchSettings"
+        android:id="@+id/switchTheme"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
@@ -34,7 +34,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/switchSettings"
+        app:layout_constraintTop_toBottomOf="@id/switchTheme"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Button
