--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackground"
-        android:orientation="vertical"
-        android:visibility="invisible" />
+        android:orientation="vertical" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintPlaseHolder"
         android:layout_width="match_parent"
+        android:visibility="invisible"
         android:layout_height="match_parent">
 
         <ImageView
