--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -37,7 +37,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.myapplication_finalnavigatio.ui.Settings.SettingsFragment"
+        android:name="com.example.myapplication_finalnavigatio.ui.settings.SettingsFragment"
         android:label="@string/settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
